--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: center;
   position: relative;
-  overflow: hidden;
   padding-top: 80px;
 }
 
